# brb

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  CONTRIBUTORS.txt  LICENSE  Makefile  Procfile  README.rst  cypress.json  db.sqlite3  local.yml  manage.py  package.json  production.yml  pyproject.toml  pytest.ini
.envs/.local/: .django  .postgres
brb/: conftest.py  schema.py
brb/scores/: admin.py  forms.py  models.py  schema.py  serializers.py  urls.py  views.py
brb/scores/migrations/: 0001_initial.py  0002_auto_20190601_1755.py
brb/scores/tests/: factories.py  test_api_views.py  test_models.py  test_views.py
brb/taskapp/: celery.py
brb/templates/: base.html
brb/terminal_logs/: api_urls.py  api_views.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
brb/users/: admin.py  apps.py  serializers.py  urls.py  views.py  views_integration.py  views_rest.py
compose/local/django/: start  (+1 more)
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
cypress/integration/: logs.spec.js  logs.test.js  signup.spec.js  signup.test.js
cypress/support/: commands.js
deploy/: activate_production_machine.sh  check_deploy.sh  configure_swarm.sh  create_machine.sh  create_swarm.sh  deploy_swarm.sh  logs.sh  production.sh  push_docker_images.sh  rm_swarm.sh
docs/: Makefile  conf.py  index.rst  make.bat
frontend/: package.json
frontend-backup/src/: App.vue  database.ts  main.ts  router.ts  store.ts
frontend/src/: App.vue  main.js  main.ts  router.js  router.ts  store.js  store.ts
requirements/: local.txt
(+62 files in other folders)
